<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dartboard"
    tools:context="com.example.android.playindarts.MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:padding="16dp"
        android:layout_below="@+id/title"
        android:text="@string/subtitle"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/subtitle">



    <Button
        android:id="@+id/goToRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="20dp"
        android:background="#228b22"
        android:text="@string/TheRulesButton" />

    <Button
        android:id="@+id/goToScoreTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="20dp"
        android:background="#228b22"
        android:text="@string/PlayGameButtom" />

    </LinearLayout>

</RelativeLayout>


