<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dartboard"
    tools:context="com.example.android.playindarts.GameRules">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="casual"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/TheRulesTitle"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:fontFamily="casual"
            android:gravity="left"
            android:padding="14dp"
            android:text="@string/TheRulesDescription"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/goToScoreTracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#aa228b22"
            android:text="@string/PlayGameButtom" />



</RelativeLayout>
